feat: Implement api to get latest matched
