# api-service/app/Models/SpotTrade.php
@@ -12,8 +12,18 @@ use Illuminate\Database\Eloquent\Relations\BelongsTo;
 class SpotTrade extends Model
 {
     protected $fillable = [
-        'maker_order_id', 'taker_order_id', 'quantity', 'price',
+        'maker_order_id', 'taker_order_id', 'quantity', 'price', 'market_id',
     ];
+
+    public function makerOrder(): BelongsTo
+    {
+        return $this->belongsTo(SpotOrder::class, 'id', 'marker_order_id');
+    }
+
+    public function takerOrder(): BelongsTo
+    {
+        return $this->belongsTo(SpotOrder::class, 'id', 'taker_order_id');
+    }
 
     public function commission(): BelongsTo
     {
